projects alignment fixed

--- a/css/projects.css
+++ b/css/projects.css
@@ -10,6 +10,12 @@
 	padding-top: 100px;
 	width: 100%;
 	height: 100%;
+	display: -webkit-flex;
+	display: flex;
+	-webkit-flex-wrap: wrap;
+	flex-wrap: wrap;
+	-webkit-align-content: center;
+	align-content: center;
 }
 
 .projects-index p {
